--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,16 @@ input::placeholder {
   backdrop-filter: blur(4px);
   background-color: rgba(255, 255, 255, 0.2);
 }
+.btn-login {
+  background-color: rgba(0, 208, 132, 1);
+  padding: 12px 16px;
+  color: white;
+  border: none;
+  border-radius: 8px;
+}
+button[disabled] {
+  background-color: rgba(221, 221, 221, 1);
+}
 
 .login-box {
   background: rgba(255, 255, 255, 0.95);
